--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,25 @@
 name: vulnerability scan workflow
 
-on: push
+on: [push, workflow_dispatch]
 
 jobs:
     meterian_scan:
         name: Meterian client scan
         runs-on: ubuntu-latest
         steps: 
-          - name: Checkout
+          - name: Checkout (official GitHub action)
             uses: actions/checkout@v3
-          - name: Scan project with the Meterian client
-            uses: MeterianHQ/meterian-github-action@v1.0.10
+            
+          - name: Setup JDK 11 (official GitHub action)
+            uses: actions/setup-java@v3
+            with:
+                java-version: '11'
+                distribution: 'adopt'
+                        
+          - name: Download the Meterian Thin Client
+            run: wget -q https://www.meterian.io/downloads/meterian-cli.jar
+            
+          - name: Scan project with the Meterian Thin Client
+            run: java -jar meterian-cli.jar
             env:
                 METERIAN_API_TOKEN: ${{ secrets.METERIAN_API_TOKEN }}
-            with:
-                cli_args: "" #[ Meterian CLI Options ]
